fix stall display menu disorder when description is too long

--- a/trunk/cz2006/web/static/stall/css/stallstyle.css
+++ b/trunk/cz2006/web/static/stall/css/stallstyle.css
@@ -286,4 +286,9 @@ margin-right:3px;
     color:red;
 }
 
+.line3{
+    height:50px;
+    overflow:auto;
+}
+
 
